--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.9",
+    "@nextui-org/react": "^2.6.8",
     "bootstrap": "^5.3.3",
     "firebase": "^10.14.1",
+    "framer-motion": "^11.15.0",
     "lucide-react": "^0.427.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
