--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.9",
     "@nextui-org/react": "^2.6.8",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "firebase": "^10.14.1",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.427.0",
+    "ogl": "^1.0.11",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
